[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bangit"
version = "0.1.0"
description = "Shebang surgeon for the Lindows era"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[project.scripts]
bangit = "bangit:main"
